fix: fixed vault layout problem

--- a/src/app/vault/page.model.css
+++ b/src/app/vault/page.model.css
@@ -1,6 +1,6 @@
 .vaultTitle {
-    padding-top: 5%;
-    font-size: 400%;
+    padding: 2%;
+    font-size: 250%;
     color: white;
     font-weight: bold;
 }
